GL/Projet_GL/src/test/deca/syntax/invalid/AvecObjet/appelmthd_virgule.deca
// Test : Ajout de virgule dans l'appel de méthode
// But : détecter l'ajout de virgule dans l'appel de méthode
// Type d'erreur : erreur syntaxique
// Résultat attendu : no viable alternative at input 't.f(6,8,)'


class Test{
   int x;
   void f(int r,int p){
    println("Je ne fais rien");
   }

}

{
    Test t = new Test();
    t.f(6,8,);
}